<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="233dp"
                android:layout_height="191dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/vetcare" />


            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/username"
                android:paddingLeft="16dp" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/main_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/login"
                style="@style/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background"
                android:text="@string/main_button"
                android:textColor="@color/background"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp"/>

            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>